# brainfuck-interpreter

./: README.md  brainfuck-interpreter.cabal
spec/: InterpreterSpec.hs  SourceSpec.hs  Spec.hs  TapeSpec.hs
src/: BrainFuck.hs  Interpreter.hs  Main.hs  Source.hs  Tape.hs
