name:                brainfuck-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tejasbubane/brainfuck-interpreter#readme
author:              Tejas Bubane
maintainer:          tejasbubane@gmail.com
copyright:           2019-2020 Tejas Bubane
category:            interpreter
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
  exposed-modules:     BrainFuck

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec, src
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
  other-modules:       BrainFuck
