name:                brainfuck-interpreter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tejasbubane/brainfuck-interpreter#readme
author:              Tejas Bubane
maintainer:          tejasbubane@gmail.com
copyright:           2019-2020 Tejas Bubane
category:            interpreter
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brainfuck
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base
  main-is:             Main.hs
  other-modules:       Interpreter
                     , Source
                     , Tape

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec, src
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , checkers
                     , silently
  other-modules:       Source
                     , SourceSpec
                     , Tape
                     , TapeSpec
                     , Interpreter
                     , InterpreterSpec
